@@ -212,6 +212,7 @@ static void init_options (SnapScan_Scanner * ps)
     case PRISA5300:
     case PRISA1240:
     case PRISA5000:
+    case ARCUS1200:
         po[OPT_SCANRES].constraint.word_list = resolutions_1200;
         break;
     default:
@@ -1387,8 +1388,11 @@ SANE_Status sane_control_option (SANE_Handle h,
 
 /*
  * $Log$
- * Revision 1.6  2003/04/02 21:22:53  oliverschwartz
- * Enabled 1200 DPI for Acer 5000
+ * Revision 1.7  2003/04/30 20:49:39  oliverschwartz
+ * SnapScan backend 1.4.26
+ *
+ * Revision 1.8  2003/04/30 20:42:18  oliverschwartz
+ * Added support for Agfa Arcus 1200 (supplied by Valtteri Vuorikoski)
  *
  * Revision 1.7  2003/04/02 21:17:12  oliverschwartz
  * Fix for 1200 DPI with Acer 5000
